This is because some file name handler (like ange-ftp) are not able to
run processes remotely.

** The new command `display-time-world' starts an updating time display
using several time zones, in a buffer.

* Startup Changes in Emacs 23.1

** New user option `initial-buffer-choice' specifies what to display
after starting Emacs: startup screen, *scratch* buffer, visiting a
file or directory.


* Incompatible Editing Changes in Emacs 23.1


* Editing Changes in Emacs 23.1

** TAB now indents the region if the region is active and
`transient-mark-mode' is turned on.

** C-z now invokes `suspend-frame', C-x C-c now invokes
`save-buffers-kill-terminal'.

** New command kill-matching-buffers kills buffers whose name matches a regexp.

** Minibuffer changes:

*** isearch started in the minibuffer searches in the minibuffer history.
Reverse isearch commands (C-r, C-M-r) search in previous minibuffer
history elements, and forward isearch commands (C-s, C-M-s) search in
next history elements.  When the reverse search reaches the first history
element, it wraps to the last history element, and the forward search
wraps to the first history element.  When the search is terminated, the
history element containing the search string becomes the current.


* New Modes and Packages in Emacs 23.1

** The package doc-view.el has been added.  It supports viewing of PDF,
PostScript and DVI documents inside an Emacs buffer by converting the
document to a set of PNG images first.  One can also search for a
regular expression in the document.  The commentary of the file explains
its usage.

** A new game called `bubbles' has been added.

** minibuffer-indicate-depth-mode shows the minibuffer depth in the prompt.


* Changes in Specialized Modes and Packages in Emacs 23.1

** archive-mode has basic support to browse Rar archives.
** talk.el has been extended for multiple tty support.

** compilation-auto-jump-to-first-error tells `compile' to jump to